--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
+        "fast-csv": "^4.3.6",
         "mongoose": "^6.5.2"
     },
     "devDependencies": {
