--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "ejs": "^3.0.1",
         "express": "^4.17.1",
         "fast-csv": "^4.3.6",
-        "mongoose": "^6.5.2"
+        "mongoose": "^6.5.2",
+        "socket.io": "^4.5.3"
     },
     "devDependencies": {
         "nodemon": "^1.19.4"
